fix z-indexes

--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -20,11 +20,11 @@
   &.show {
     opacity: 1;
     visibility: visible;
-    z-index: 2;
+    z-index: 16;
     transition: all 500ms $easing;
 
     @include phone {
-      z-index: 5;
+      z-index: 17;
     }
   }
 
